apply plugin: 'com.android.application'

android {
    signingConfigs {
        config {
            keyAlias 'mysignature'
            keyPassword 'fionera'
            storeFile file('../demo.jks')
            storePassword 'fionera'
        }
    }

    compileSdkVersion 25
    buildToolsVersion '25.0.2'

    defaultConfig {
        applicationId "com.fionera.demo"
        minSdkVersion 16
        targetSdkVersion 25
        versionCode 12
        versionName "1.5.0"

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        externalNativeBuild {
            cmake {
                cppFlags ""
            }
        }

        jackOptions {
            enabled true
        }

        ndk {
            abiFilters "armeabi"
        }
    }

    buildTypes {
        debug {
            zipAlignEnabled false
            minifyEnabled false
        }
        release {
            zipAlignEnabled true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }
    }

    productFlavors {
        dev {
            minSdkVersion 21
            resConfigs("zh_CN", "en_US")
            return 0
        }
        emu {
            minSdkVersion 25
            resConfigs("zh_CN", "en_US")
            ndk {
                abiFilters "x86"
            }
            return 0
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    dexOptions {
        preDexLibraries = false
    }

    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }
}

dependencies {
    compile "com.android.support:design:$support_version"
    compile "com.android.support:recyclerview-v7:$support_version"
    compile "com.android.support:appcompat-v7:$support_version"
    compile "com.android.support:cardview-v7:$support_version"
    compile "com.android.support:transition:$support_version"
    compile 'com.android.support.constraint:constraint-layout:1.0.2'
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })

    compile 'com.taobao.android:weex_sdk:0.10.0'
    compile 'com.ogaclejapan.smarttablayout:library:1.6.1'
    compile 'me.dm7.barcodescanner:zxing:1.9'

    compile 'com.sun.mail:android-mail:1.5.6'

    compile project(':multipic')
}
